ncc/testsuite/positive/constraints.n
using System;
using System.Console;
using Nemerle.Utility;

public module Program
{
  Main() : void
  {
    mutable str1 : string;
    mutable str2 : string = "test";
    mutable val1 : int? = 1;
    mutable val2 : int? = null;
    
    WriteLine(str1.IsNull());
    WriteLine(str2.IsNull());
    WriteLine(val1.IsNull());
    WriteLine(val2.IsNull());
  }

  public IsNull[T](this x : T?) : bool
    where T: struct
  {
    !x.HasValue
  }

  public IsNull[T](this x : T) : bool
    where T: class
  {
    x == null
  }
}

/*
BEGIN-OUTPUT
True
False
False
True
END-OUTPUT
*/
