ncc/testsuite/negative/recursive-type-1.n
using System;
using System.Console;
using Nemerle.Utility;

public module Program
{
  Main() : void { }
  
  public IsNull[T](this x : T) : bool //E: recursive type or recursive constraint detected.+Nullable
    where T: Nullable[T]
  {
    false
  }
}